--- a/dogs.html
+++ b/dogs.html
@@ -6,6 +6,20 @@
     <title>Dogs</title>
 </head>
 <body>
+    <h1>Dogs</h1>
+    <p>Dogs Are Cool!</p>
+
+    <article>
+        <h2>Fun Facts About Dogs:</h2>
+        <p>30% of dogs sleep in their owner's beds...</p>
+        <p>A dog's nose print is unique, much like a person's fingerprint.</p>
+    </article>
+
+<!--BONUS Add more tags-->
+<a>
+    <img>
+</a>
+
     
 </body>
 </html>
