--- a/deprecatedTags.html
+++ b/deprecatedTags.html
@@ -8,5 +8,14 @@
 <body>
     <h1>Deprecated Tags</h1>
     <p><strong>Deprecated tags</strong> are tags that are no longer supported by HTML.</p>
+
+    
+
+
+
+<!--Link my pages together-->
+    <a href="dogs.html">Dogs</a>
+    <br>
+    <a href="desserts.html">Desserts</a>
 </body>
 </html>
