--- a/dogs.html
+++ b/dogs.html
@@ -7,18 +7,30 @@
 </head>
 <body>
     <h1>Dogs</h1>
-    <p>Dogs Are Cool!</p>
+    <p><strong>Dogs</strong> are cool! They really love to play <em>fetch</em>!</p>
 
     <article>
         <h2>Fun Facts About Dogs:</h2>
         <p>30% of dogs sleep in their owner's beds...</p>
-        <p>A dog's nose print is unique, much like a person's fingerprint.</p>
+        <p>A dog's nose print is unique, much like a person's fingerprint...</p>
+        <p>Yawning is contagious, even for dogs...</p>
     </article>
 
 <!--BONUS Add more tags-->
-<a>
-    <img>
-</a>
+    <h4>Click the picture below for more fun facts!</h4>
+<!--Made a link to a website open in a new window with anchor tag and target attribute-->
+    <a href="https://www.akc.org/expert-advice/lifestyle/dog-facts/"
+        target="_blank">
+<!--Made an image the link by nesting the image inside an anchor tag...Added a style and width attribute-->
+        <img src="https://images.unsplash.com/photo-1535930891776-0c2dfb7fda1a?q=80&w=400&auto=format&fit=crop&ixlib=rb-4.0.3"
+            width="100" style="border: solid 2px">
+    </a>
+    
+<!--Link my pages together-->
+    <br>
+    <a href="desserts.html">Desserts</a>
+    <br>
+    <a href="deprecatedTags.html">Deprecated Tags</a>
 
     
 </body>
