--- a/deprecatedTags.html
+++ b/deprecatedTags.html
@@ -9,6 +9,52 @@
     <h1>Deprecated Tags</h1>
     <p><strong>Deprecated tags</strong> are tags that are no longer supported by HTML.</p>
 
+    <table border="1">
+        <th>Tag</th>
+        <th>Description</th>
+        <th>Alternate</th>
+        <tr>
+            <td>acronym</td>
+            <td>Allows authors to clearly indicate a sequence of characters that compose an acronym or abbreviation for a word.</td>
+            <td>abbr</td>
+        </tr>
+        <tr>
+            <td>listing</td>
+            <td>It was intended as a way to render HTML code on a page.</td>
+            <td>pre</td>
+        </tr>
+        <tr>
+            <td>dir</td>
+            <td>Container for a directory of files and/or folders, potentially with styles and icons applied by the user agent.</td>
+            <td>ul</td>
+        </tr>
+        <tr>
+            <td>image</td>
+            <td>An ancient and poorly supported precursor to the image element.</td>
+            <td>img</td>
+        </tr>
+        <tr>
+            <td>strike</td>
+            <td>Places a strikethrough (horizontal line) over text.</td>
+            <td>del</td>
+        </tr>
+        <tr>
+            <td>u</td>
+            <td>It is used to create underlined text.</td>
+            <td>css...text-decoration</td>
+        </tr>
+        <tr>
+            <td>spacer</td>
+            <td>This tag is used to specify a whitespace</td>
+            <td>br</td>
+        </tr>
+        <tr>
+            <td>center</td>
+            <td>It is used to set the alignment of the text.</td>
+            <td>css...text-align</td>
+        </tr>
+    </table>
+
     
 
 
