--- a/dogs.html
+++ b/dogs.html
@@ -25,6 +25,10 @@
         <img src="https://images.unsplash.com/photo-1535930891776-0c2dfb7fda1a?q=80&w=400&auto=format&fit=crop&ixlib=rb-4.0.3"
             width="100" style="border: solid 2px">
     </a>
+    <br>
+    <img src="Penelope.jpg"
+        height="400"
+        style="border: solid lightgreen 4px; border-radius: 50%;">
     
 <!--Link my pages together-->
     <br>
