Added dessert image

--- a/desserts.html
+++ b/desserts.html
@@ -16,8 +16,12 @@
         <p>Chocolate Cake</p>
     </article>
 
+    <img src="https://images.pexels.com/photos/683499/pexels-photo-683499.jpeg"
+        width="400">
+
     
 <!--Link my pages together-->
+    <br>
     <a href="dogs.html">Dogs</a>
     <br>
     <a href="deprecatedTags.html">Deprecated Tags</a>
