--- a/desserts.html
+++ b/desserts.html
@@ -17,7 +17,8 @@
     </article>
 
     <img src="https://images.pexels.com/photos/683499/pexels-photo-683499.jpeg"
-        width="400">
+        width="400"
+        style="border: solid 4px; border-radius: 40px;">
 
     
 <!--Link my pages together-->
